added topNav and sideNav

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,4 +4,13 @@
   "[javascript]": {
     "editor.formatOnSave": true
   },
+  "[html]": {
+    "editor.formatOnSave": true
+  },
+  "[css]": {
+    "editor.formatOnSave": true
+  },
+  "emmet.includeLanguages": {
+    "javascript": "javascriptreact"
+ }
 }
